@@ -1,3 +1,12 @@
+2002-03-27  Chris Blumenberg  <cblu@apple.com>
+
+	Now setting the modifier bit for the activate and cursor events.
+
+	* Plugins.subproj/IFPluginView.h:
+	* Plugins.subproj/IFPluginView.mm: (-[IFPluginView drawRect:]), (-[IFPluginView
+	windowBecameKey:]), (-[IFPluginView windowResignedKey:]), (-[IFPluginView
+	mouseEntered:]), (-[IFPluginView mouseExited:]):
+
 2002-03-27  Darin Adler  <darin@apple.com>
 
 	* WebView.subproj/IFPreferences.mm: (+[IFPreferences load]): Switch back
